--- a/fantasias.html
+++ b/fantasias.html
@@ -122,6 +122,10 @@
         <h1>Arquivo Sombrio</h1>
         <p>Decifrando o Simbolismo das Fantasias de Halloween</p>
     </header>
+    <a href="index.html" class="btn-voltar">
+        <span class="setinha">⭠</span>
+        Voltar
+    </a>
 
     <div class="container">
 
