--- a/index.html
+++ b/index.html
@@ -43,55 +43,14 @@
                 </ul>
             </li>
 
-            <!-- ITEM 2: Front-end -->
-            <li>
-                <!-- Ícone laptop/código -->
-                <i class="fa-solid fa-droplet"></i> Maquiagem</a>
-                <ul>
-                    <li><a href="#"><i class="fa-solid fa-fire"></i>Fogo</a></li>
-                    <li><a href="#"><i class="fa-solid fa-eye-slash"></i>Eye</a></li>
-                    <li><a href="#"><i class="fab fa-react"></i> React</a></li>
-                </ul>
-            </li>
-            <!-- ITEM 3: Infraestrutura -->
-            <li>
-                <i class="fa-solid fa-skull"></i> Estátuas</a>
-                <ul>
-                    <li><a href="#"><i class="fas fa-network-wired"></i> Redes</a></li>
-                    <li><a href="#"><i class="fas fa-cloud"></i> Cloud</a></li>
-                </ul>
-            </li>
 
-            <!-- ITEM 4: Business -->
-            <li>
-                <i class="fa-solid fa-hat-wizard"></i> Acessórios</a>
-                <ul>
-                    <li><a href="#"><i class="fas fa-chart-line"></i> Marketing</a></li>
-                    <li><a href="#"><i class="fas fa-handshake"></i> Vendas</a></li>
-                </ul>
-            </li>
+ 
 
-            <!-- ITEM 5: Design & UX -->
-            <li>
-                <i class="fa-solid fa-spider"></i> Decoração</a>
-                <ul>
-                    <li><a href="#"><i class="fas fa-paint-brush"></i> UI Design</a></li>
-                    <li><a href="#"><i class="fas fa-drafting-compass"></i> Prototipagem</a></li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-
-    <!-- Container do lado direito: ícones de atalho -->
-    <div class="container-direita">
-        <!-- Ícone de coração -->
-        <a href="#"><i class="fas fa-heart"></i></a>
-        <!-- Ícone de home -->
-        <a href="#"><i class="fas fa-home"></i></a>
-        <!-- Ícone de usuário -->
-        <a href="#"><i class="fas fa-user"></i></a>
-    </div>
 </header>
+<a href="index.html" class="btn-voltar">
+    <span class="setinha">⭠</span>
+    Voltar
+</a>
 <main class="conteudo">
     <section class="introducao">
         <h1>Bem-vindo ao Mundo do Halloween</h1>
