--- a/aboboras.html
+++ b/aboboras.html
@@ -69,6 +69,10 @@
         }
     </style>
 </head>
+<a href="index.html" class="btn-voltar">
+    <span class="setinha">⭠</span>
+    Voltar
+</a>
 
 <body>
  
