--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container-esquerda">
 
         <!-- Logo do site -->
-        <img src="caixao.png" alt="Logo" class="logo">
+        <img src="caixao-removebg-preview.png" alt="Logo" class="logo">
 
         <!-- Menu principal -->
         <ul class="lista-menu">
